// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Svg > rendering > does not render desc without a label 1`] = `
<body>
  <div>
    
    <svg
      aria-labelledby="tao-desc-123"
      height="567"
      style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
      version="1.1"
      viewBox="0 0 1234 567"
      width="1234"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:svgjs="http://svgjs.com/svgjs"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <desc
        id="tao-desc-123"
      >
        graphic interaction
      </desc>
      
      <defs>
        <filter
          filterUnits="userSpaceOnUse"
          id="tao-svg-123-filter-shadow"
        >
          <fedropshadow
            dx="0"
            dy="0"
            flood-color="black"
            stdDeviation="1.5"
          />
        </filter>
      </defs>
      
      <g
        class="image"
        transform="translate(0, 0)"
      >
        <image
          class="svg-image"
          height="567"
          href="/path/to/image"
          preserveAspectRatio="none"
          width="1234"
          x="0"
          y="0"
        />
        
        
      </g>
    </svg>
    
    
    
  </div>
</body>
`;

exports[`Svg > rendering > renders basic + bayAttrs props to markup 1`] = `
<body>
  <div>
    
    <svg
      aria-labelledby="tao-desc-123"
      height="567"
      style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
      version="1.1"
      viewBox="0 0 1434 567"
      width="1434"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:svgjs="http://svgjs.com/svgjs"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <desc
        id="tao-desc-123"
      >
        a foovist artwork
      </desc>
      
      <defs>
        <filter
          filterUnits="userSpaceOnUse"
          id="tao-svg-123-filter-shadow"
        >
          <fedropshadow
            dx="0"
            dy="0"
            flood-color="black"
            stdDeviation="1.5"
          />
        </filter>
      </defs>
      
      <g
        class="image"
        transform="translate(200, 0)"
      >
        <image
          class="svg-image"
          height="567"
          href="/path/to/image"
          preserveAspectRatio="none"
          width="1234"
          x="0"
          y="0"
        />
        
        
      </g>
    </svg>
    
    
    
  </div>
</body>
`;

exports[`Svg > rendering > renders basic props to markup 1`] = `
<body>
  <div>
    
    <svg
      aria-labelledby="tao-desc-123"
      height="567"
      style="--shadow-filter-url: url(#external-svgid-123-filter-shadow);"
      version="1.1"
      viewBox="0 0 1234 567"
      width="1234"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:svgjs="http://svgjs.com/svgjs"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <desc
        id="tao-desc-123"
      >
        a foovist artwork
      </desc>
      
      <defs>
        <filter
          filterUnits="userSpaceOnUse"
          id="external-svgid-123-filter-shadow"
        >
          <fedropshadow
            dx="0"
            dy="0"
            flood-color="black"
            stdDeviation="1.5"
          />
        </filter>
      </defs>
      
      <g
        class="image"
        transform="translate(0, 0)"
      >
        <image
          class="svg-image"
          height="567"
          href="/path/to/image"
          preserveAspectRatio="none"
          width="1234"
          x="0"
          y="0"
        />
        
        
      </g>
    </svg>
    
    
    
  </div>
</body>
`;

exports[`Svg > rendering > renders slot contents 1`] = `
<body>
  <div>
    
    <svg
      aria-labelledby="tao-desc-123"
      height="3000"
      style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
      version="1.1"
      viewBox="0 0 5000 3000"
      width="5000"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:svgjs="http://svgjs.com/svgjs"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <desc
        id="tao-desc-123"
      >
        graphic interaction
      </desc>
      
      <defs>
        <filter
          filterUnits="userSpaceOnUse"
          id="tao-svg-123-filter-shadow"
        >
          <fedropshadow
            dx="0"
            dy="0"
            flood-color="black"
            stdDeviation="1.5"
          />
        </filter>
      </defs>
      <g
        slot="bay"
      >
        <text>
          Test Bay Slot
        </text>
      </g>
      
      <g
        class="image"
        transform="translate(0, 0)"
      >
        <image
          class="svg-image"
          height="300"
          href="file.png"
          preserveAspectRatio="none"
          width="500"
          x="0"
          y="0"
        />
        
        <g
          slot="content"
        >
          <text>
            Test Content Slot
          </text>
        </g>
        
      </g>
    </svg>
    
    
    
  </div>
</body>
`;
